<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ToggleButton
        android:id="@+id/toggle_async"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center_horizontal"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:textOn="@string/request_async"
        android:textOff="@string/request_async_close" />

    <Button
        android:id="@+id/btn_okhttp_get"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center_horizontal"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:text="@string/request_get"/>

    <Button
        android:id="@+id/btn_okhttp_post_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center_horizontal"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:text="@string/request_post_form"/>

    <Button
        android:id="@+id/btn_okhttp_post_json"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center_horizontal"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:text="@string/request_post_json"/>

    <Button
        android:id="@+id/btn_okhttp_post_upload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center_horizontal"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:text="@string/request_post_multi_upload"/>

    <Button
        android:id="@+id/btn_okhttp_post_download"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center_horizontal"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:text="@string/request_post_download"/>

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center_horizontal"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:text="@string/request_cancel"/>

    <ImageView
        android:id="@+id/image_download"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_margin="10dp"
        android:layout_gravity="center_horizontal"
        android:background="@mipmap/ic_launcher"/>

</LinearLayout>